Release 0.4.0 with authenticated HTTP proxy
